test/unittest/error/tst.errorend.r
Error fired
End fired after exit

-- @@stderr --
dtrace: error in dt_clause_2 for probe ID 1 (dtrace:::BEGIN): invalid address ({ptr}) at BPF pc NNN
